projects/core/components/cell/cell.styles.less
@import '@taiga-ui/styles/utils';

[tuiCell]:where(*&) {
    --t-pad: 0.125rem 1rem;
    --t-radius: var(--tui-radius-s);

    .transition(~'background');
    .button-clear();

    position: relative;
    display: flex;
    align-items: center;
    text-align: start;
    box-sizing: content-box;
    isolation: isolate;
    color: var(--tui-text-primary);
    padding: var(--t-pad);
    min-block-size: var(--t-block-size);
    border-radius: var(--t-radius);

    &:is(button, label):not(:disabled):active {
        background: var(--tui-background-neutral-1);
    }

    &:disabled,
    &[data-state='disabled'] {
        opacity: initial;
        pointer-events: none;

        & > *:not([tuiTooltip]) {
            opacity: var(--tui-disabled-opacity);
        }
    }

    &:is(label):has(input:disabled) {
        opacity: initial;
        pointer-events: none;

        & > *:not([tuiTooltip]) {
            opacity: var(--tui-disabled-opacity);
        }
    }

    [tuiAccessories] {
        position: relative;
        display: flex;
        max-block-size: var(--t-block-size);
        align-items: center;
        align-self: stretch;
    }

    // Specificity artificially increased for disabled state
    [tuiCellActions][tuiCellActions] {
        position: absolute;
        z-index: 1;
        inset-inline-end: 0;
        padding-inline-end: inherit;

        --t-group-mask: none;
        --t-group-mask-end: none;
        --t-group-mask-start: none;

        & ~ * {
            .transition(opacity);
        }

        & button,
        & a {
            .transition(opacity);

            opacity: 0;

            &:focus-visible {
                opacity: 1;
            }
        }
    }

    [tuiSubtitle] {
        display: flex;
        align-items: center;
        gap: 0.25rem;
        color: var(--tui-text-secondary);
    }

    [tuiTitle] {
        flex-shrink: 7;
        margin-inline-end: auto;
        align-items: normal;
        text-align: start;
    }

    [tuiTitle] ~ [tuiTitle] {
        flex-shrink: 3;
        margin-inline-end: 0;
        text-align: end;
        align-items: flex-end;

        &[tuiFade] {
            align-items: flex-start;
        }
    }

    tui-badge-notification[data-size='xs'] {
        .center-top();

        inset-inline-start: -0.625rem;
    }

    &[data-size='s'] {
        --t-block-size: calc(var(--tui-height-s) - 0.125rem);
        --t-pad: 0.1875rem 1rem;

        gap: 0.5rem;

        &[data-height='spacious'] {
            --t-pad: 0.4375rem 1rem;
        }

        &[data-height='compact'] {
            --t-block-size: calc(var(--tui-height-s) - 0.25rem);
            --t-pad: 0 1rem;
        }

        [tuiTitle] {
            max-block-size: 100%;
            font: var(--tui-typography-ui-s);
            gap: 0;
        }

        [tuiSubtitle] {
            font: var(--tui-typography-ui-2xs);
        }

        [tuiAvatar] {
            --t-size: 1.5rem;
            --t-radius: var(--tui-radius-m);

            font: var(--tui-typography-body-m);
            font-size: 0.5625rem;
            margin: 0.1875rem 0;
        }
    }

    &[data-size='m'] {
        --t-block-size: calc(var(--tui-height-m) - 0.75rem);
        --t-pad: 0.375rem 1rem;

        gap: 0.75rem;

        &[data-height='spacious'] {
            --t-pad: 1rem;
        }

        &[data-height='compact'] {
            --t-block-size: calc(var(--tui-height-m) - 0.5rem);
            --t-pad: 0 1rem;
        }

        [tuiTitle] {
            font: var(--tui-typography-ui-s);
            gap: 0.125rem;
        }

        [tuiSubtitle] {
            font: var(--tui-typography-ui-xs);
        }

        [tuiAvatar] {
            --t-size: 2rem;
            --t-radius: var(--tui-radius-m);

            align-self: flex-start;
        }
    }

    &[data-size='l'] {
        --t-block-size: calc(var(--tui-height-l) - 1rem);
        --t-pad: 0.5rem 1rem;
        --t-radius: var(--tui-radius-l);

        gap: 1rem;

        &[data-height='spacious'] {
            --t-pad: 1.25rem 1rem;
        }

        &[data-height='compact'] {
            --t-block-size: calc(var(--tui-height-l) - 1rem);
            --t-pad: 0 1rem;
        }

        [tuiAvatar] {
            --t-size: 2.5rem;

            font: var(--tui-typography-body-m);
            font-weight: bold;
            align-self: flex-start;
        }
    }

    &:hover [tuiCellActions] ~ * {
        opacity: 0;
    }

    &:hover [tuiCellActions] button,
    &:hover [tuiCellActions] a,
    &:hover [tuiCellActions] label {
        opacity: 1;
    }

    &:focus-visible {
        outline: 0.125rem solid var(--tui-border-focus);
        outline-offset: -0.125rem;
    }
}

@media @tui-mouse {
    a[tuiCell]:where(*&):hover,
    button[tuiCell]:where(*&):hover,
    label[tuiCell]:where(*&):hover {
        &:not(:disabled, [data-state='disabled']) {
            background: var(--tui-background-neutral-1);
            cursor: pointer;
        }
    }

    label[tuiCell]:where(*&):hover {
        &:not(:has(input:disabled)) {
            background: var(--tui-background-neutral-1);
            cursor: pointer;
        }
    }
}

