chore: fix gap (#14166)

--- a/projects/core/components/cell/cell.styles.less
+++ b/projects/core/components/cell/cell.styles.less
@@ -159,7 +159,7 @@
 
         [tuiTitle] {
             font: var(--tui-typography-ui-s);
-            gap: 0.125rem;
+            gap: 0.0625rem;
         }
 
         [tuiSubtitle] {
